--- a/uni.html
+++ b/uni.html
@@ -1,1 +1,25 @@
-North Ming Zu University information
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="referrer" content="no-referrer" />
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <title>University</title>
+  </head>
+  <body>
+    North Ming Zu University information
+
+    <img
+      src="https://www.adscientificindex.com/logos/13321.png"
+      alt="NMZ university logo"
+    />
+  </body>
+</html>
