Add more uni info

--- a/uni.html
+++ b/uni.html
@@ -1,1 +1,3 @@
 North Ming Zu University information
+
+North Minzu University (abbreviated as NMU; Chinese: 北方民族大学; pinyin: Běifāng Mínzú Dàxúe) is a Chinese university located at Yinchuan City, Ningxia Province, China.[4] It is a comprehensive national institution of higher education which is affiliated to the State Ethnic Affairs Commission.[2][4] 
